Add aggressive JVM optimisation flags