@@ -44,8 +44,8 @@ fi
 
 # -Dorg.jboss.byteman.verbose
 # -Dco.paralleluniverse.fiber.verifyInstrumentation=true
-cmd="$JAVA_HOME/bin/java -jar target/ring-bench.jar\
- -jvmArgsAppend \"-Xbootclasspath/p:$bytemanAgentLocation $jfrOpts -Dorg.jboss.byteman.transform.all -DworkerCount=$workerCount -DringSize=$ringSize -javaagent:$quasarAgentLocation -javaagent:$bytemanAgentLocation=script:script.btm\"\
+cmd="$JAVA_HOME/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts -jar target/ring-bench.jar\
+ -jvmArgsAppend \"-server -XX:+TieredCompilation -XX:+AggressiveOpts -Xbootclasspath/p:$bytemanAgentLocation $jfrOpts -Dorg.jboss.byteman.transform.all -DworkerCount=$workerCount -DringSize=$ringSize -javaagent:$quasarAgentLocation -javaagent:$bytemanAgentLocation=script:script.btm\"\
  -wi $warmupIters -i $iters -bm $stat -tu $unit -f $forks \"$benchRegexp\""
 
 echo "$cmd"
